Update README
Restored original instructions for downloading and running jar file by double click.