@@ -3,21 +3,13 @@ JOGL Render Engine
 
 # Installing and running
 
-Extract javarenderengine.zip file into a folder, which will contain javarenderengine.jar and run.bat.
-Double click run.bat which will open console window and graphical main program window.
+Install JAVA JDK 21 or later at, and double click on the downloaded release javarenderengine.jar to run it directly:
+https://www.oracle.com/java/technologies/downloads/#java21
 
 Alternative way of running the program is to open a console window on the javarenderengine.jar location and type command
 "java -jar javarenderengine.jar", which will also show debug output text on the console window. Otherwise console debug output
 can be activated in the Java Control Panel or Configure Java application -> Advanced -> Java console -> Show console and
 Miscellaneous -> Place Java icon in system tray if the java icon is not already visible on your operating system tray.
-
-```
-java --add-exports java.base/java.lang=ALL-UNNAMED
-     --add-exports java.desktop/sun.java2d=ALL-UNNAMED
-     --add-opens java.desktop/sun.awt=ALL-UNNAMED
-     --add-opens java.desktop/sun.awt.windows=ALL-UNNAMED
-     -jar javarenderengine.jar
-```
 
 # Development and distribution
 
